--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.datasource.password=Bringfireh88$$
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.security.user.name=username
-spring.security.user.password=Bringfireh88
+#spring.security.user.name=vs45tech
+#spring.security.user.password=dummy
