--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 logging.level.org.springframework=info
 management.endpoints.web.exposure.include=*
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.jpa.defer-datasource-initialization=true
 #spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/socialmedia
+spring.datasource.url=jdbc:mysql://localhost:3306/todos
 spring.datasource.username=root
 spring.datasource.password=Bringfireh88$$
 spring.jpa.hibernate.ddl-auto=update
